--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-24  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/mblur.c: fixed range check of blur type
+	parameter (bug #142965).
+
+2004-05-24  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/maze/maze_face.c: fixed a compiler warning.
 
 2004-05-24  Sven Neumann  <sven@gimp.org>
