2004-05-24  Sven Neumann  <sven@gimp.org>
	* app/display/gimpscalecombobox.c
	(gimp_scale_combo_box_mru_remove_last): removed debugging output.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13374 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-24  Sven Neumann  <sven@gimp.org>
 
+	* app/display/gimpscalecombobox.c
+	(gimp_scale_combo_box_mru_remove_last): removed debugging output.
+
+2004-05-24  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimptoolinfo.[ch]: derive GimpToolInfo from
 	GimpViewable, it doesn't make sense for it to be a GimpData.
 
