2004-05-24  Michael Natterer  <mitch@gimp.org>
	* app/vectors/Makefile.am
	* app/vectors/gimpcoordmath.[ch]: removed...

	* app/core/Makefile.am
	* app/core/gimpcoords.[ch]: ...and added without the "bezier"
	namespace.

	* app/vectors/gimpbezierstroke.c: changed accordingly.

	* app/Makefile.am: force it to link gimpcoords.o


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13379 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2004-05-24  Michael Natterer  <mitch@gimp.org>
 
+	* app/vectors/Makefile.am
+	* app/vectors/gimpcoordmath.[ch]: removed...
+
+	* app/core/Makefile.am
+	* app/core/gimpcoords.[ch]: ...and added without the "bezier"
+	namespace.
+
+	* app/vectors/gimpbezierstroke.c: changed accordingly.
+
+	* app/Makefile.am: force it to link gimpcoords.o
+
+2004-05-24  Michael Natterer  <mitch@gimp.org>
+
 	* app/config/gimpconfigwriter.c
 	* app/core/gimpstrokeoptions.c
 	* app/widgets/gimpactiongroup.c
