2004-05-24  Michael Natterer  <mitch@gimp.org>
	* app/Makefile.am
	* app/app-docs.sgml
	* app/app-sections.txt: updated after moving around gimpcoords stuff.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13380 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-24  Michael Natterer  <mitch@gimp.org>
 
+	* app/Makefile.am
+	* app/app-docs.sgml
+	* app/app-sections.txt: updated after moving around gimpcoords stuff.
+
+2004-05-24  Michael Natterer  <mitch@gimp.org>
+
 	* app/app-sections.txt: fixed docs for interfaces.
 
 2004-05-24  Michael Natterer  <mitch@gimp.org>
