--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-24  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimptoolbox.c (toolbox_create_tools): added an evil
+	hack as workaround for the missing gtk_action_get_accel_closure().
+	Re-enables accelerator display in the tool button labels.
+
+2004-05-24  Michael Natterer  <mitch@gimp.org>
+
 	* app/vectors/Makefile.am
 	* app/vectors/gimpcoordmath.[ch]: removed...
 
