--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-24  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/rcm/rcm.h
+	* plug-ins/rcm/rcm_dialog.[ch]: rearranged and HIG-ified dialog.
+
 2004-05-24  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimptoolbox.c (toolbox_create_tools): added an evil
