2004-05-25  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/plugindetails.c
	* plug-ins/dbbrowser/dbbrowser_utils.c
	* plug-ins/pagecurl/pagecurl.c: HIG-ified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13386 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-25  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/plugindetails.c
+	* plug-ins/dbbrowser/dbbrowser_utils.c
+	* plug-ins/pagecurl/pagecurl.c: HIG-ified.
+
+2004-05-25  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/print/gimp_color_window.c
 	* plug-ins/print/gimp_main_window.c: HIG-ified and ported to
 	GtkFileChooser.
