--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2004-05-25  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/gimpressionist/brush.c
+	* plug-ins/gimpressionist/color.c
+	* plug-ins/gimpressionist/general.c
+	* plug-ins/gimpressionist/gimpressionist.[ch]
+	* plug-ins/gimpressionist/orientation.c
+	* plug-ins/gimpressionist/orientmap.c
+	* plug-ins/gimpressionist/paper.c
+	* plug-ins/gimpressionist/placement.c
+	* plug-ins/gimpressionist/presets.c
+	* plug-ins/gimpressionist/preview.c
+	* plug-ins/gimpressionist/size.c
+	* plug-ins/gimpressionist/sizemap.c: HIG-ified.
+
 2004-05-25  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpitemtreeview.h: added GimpContext parameters
