--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-05-25  Sven Neumann  <sven@gimp.org>
 
+	Sorry, couldn't resist to finish this task...
+	
+	* plug-ins/script-fu/script-fu-console.c
+	* plug-ins/script-fu/script-fu-scripts.c
+	* plug-ins/script-fu/script-fu-server.c: HIG-ified.
+
+2004-05-25  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/gimpressionist/brush.c
 	* plug-ins/gimpressionist/color.c
 	* plug-ins/gimpressionist/general.c
