2004-05-26  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimppainttool.c (gimp_paint_tool_button_press): check
	if the GimpPaintCore really is a GimpBrushCore before catsting and
	fiddling with internaly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13395 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-26  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimppainttool.c (gimp_paint_tool_button_press): check
+	if the GimpPaintCore really is a GimpBrushCore before catsting and
+	fiddling with internaly.
+
 2004-05-25  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/Makefile.am
