--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2004-05-26  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-layer-select.c
+	* app/display/gimpprogress.c
+	* app/gui/brush-select.c
+	* app/gui/color-notebook.c
+	* app/gui/convert-dialog.c
+	* app/gui/font-select.c
+	* app/gui/gradient-select.c
+	* app/gui/info-dialog.c
+	* app/gui/offset-dialog.c
+	* app/gui/palette-select.c
+	* app/gui/pattern-select.c
+	* app/gui/stroke-dialog.c
+	* app/gui/tips-dialog.c
+	* app/tools/gimpmeasuretool.c
+	* app/tools/gimptexttool.c
+	* app/widgets/gimpcolordisplayeditor.c
+	* app/widgets/gimpcolorframe.c
+	* app/widgets/gimpdevicestatus.c
+	* app/widgets/gimpviewabledialog.c: adjusted dialog spacings.
+
 2004-05-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/gimppaintcore.c: don't do special stuff if a virtual
