2004-05-26  Michael Natterer  <mitch@gimp.org>
	* app/paint/gimpbrushcore.h
	* app/paint/gimppaintcore.h: some cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13401 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-26  Michael Natterer  <mitch@gimp.org>
+
+	* app/paint/gimpbrushcore.h
+	* app/paint/gimppaintcore.h: some cleanup.
+
 2004-05-26  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell-layer-select.c
