2004-05-26  Michael Natterer  <mitch@gimp.org>
	* app/paint/gimppaintcore-stroke.c: check if we really have
	a GimpBrushCore before casting and accessing its members.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13402 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-26  Michael Natterer  <mitch@gimp.org>
 
+	* app/paint/gimppaintcore-stroke.c: check if we really have
+	a GimpBrushCore before casting and accessing its members.
+
+2004-05-26  Michael Natterer  <mitch@gimp.org>
+
 	* app/paint/gimpbrushcore.h
 	* app/paint/gimppaintcore.h: some cleanup.
 
