--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-26  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: updated.
+
 2004-05-26  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
