--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-26  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpcolordisplayeditor.c
+	* modules/cdisplay_colorblind.c
+	* modules/cdisplay_gamma.c
+	* modules/cdisplay_highcontrast.c
+	* modules/cdisplay_proof.c: HIG-ified color display filters.
+
 2004-05-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/gimppaintcore.[ch]: added "guint32 time" parameters
